--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,6 +17,17 @@
   z-index: 1;
 }
 
+.cardLayout {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  column-gap: 1.5rem /* 24px */;
+  row-gap: 1.5rem /* 24px */;
+}
+
+.card {
+  justify-content: center;
+}
+
 /** Breakpoints:
   sm: min-width: 640px;
   md: min-width: 768px;
@@ -30,11 +41,13 @@
     padding-left: 1rem /* 16px */;
     padding-right: 1rem /* 16px */;
   }
-
   .main {
     margin-top: 3rem /* 48px */;
     padding-left: 1.5rem /* 24px */;
     padding-right: 1.5rem /* 24px */;
+  }
+  .cardLayout {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
@@ -43,13 +56,14 @@
     padding-left: 2.5rem /* 40px */;
     padding-right: 2.5rem /* 40px */;
   }
-
   .main {
     margin-top: 4rem /* 64px */;
   }
-
   .heroImage {
     right: 20%;
+  }
+  .cardLayout {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
@@ -66,10 +80,16 @@
   .heroImage {
     right: 20%;
   }
+  .cardLayout {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
 }
 
 @media (min-width: 1280px) {
   .main {
     margin-top: 7rem /* 112px */;
+  }
+  .cardLayout {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
