--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,7 +27,7 @@ body {
   background: url("/static/background.png");
   background-position: 50%;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   color: #373b54;
   height: 100%;
 }
@@ -66,6 +66,19 @@ button {
 button:focus {
   outline: 1px dotted;
   outline: 5px auto -webkit-focus-ring-color;
+}
+
+/* glass-morphism */
+.glass {
+  background: hsla(0, 0%, 100%, 0.4);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border: 1px solid hsla(0, 0%, 100%, 0.2);
+}
+
+.glass:hover {
+  background: hsla(0, 0%, 100%, 0.7);
+  border: 1px solid #fff;
 }
 
 :root {
